# Online-Cinema

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-tests.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
configs/: nginx.conf
configs/nginx/: nginx.conf
docker/mailhog/: Dockerfile
docker/minio_mc/: Dockerfile
docker/nginx/: .env.sample  Dockerfile
docker/tests/: .env.sample  Dockerfile
scripts/: deploy.sh  run_migration.sh  run_web_server_dev.sh  run_web_server_prod.sh  set_nginx_basic_auth.sh  setup_mailhog_auth.sh  setup_minio.sh
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/models/: accounts.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py
src/database/validators/: accounts.py
src/exceptions/: __init__.py  payments.py  security.py  storages.py
src/notification/: emails.py  interfaces.py
src/notification/templates/: activation_complete.html  password_reset_complete.html
src/notifications/: __init__.py  emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  comment_reply_notification.html  password_change_successfully.html  password_reset_complete.html  password_reset_request.html  payment_confirmation.html  refund_confirmation_email.html
src/payments/: __init__.py  interfaces.py  stripe.py
src/routers/: accounts.py  comments.py  directors.py  favorites.py  genres.py  likes.py  movies.py  orders.py  payments.py  profiles.py  rates.py  shopping_cart.py  stars.py
src/schemas/: accounts.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py
src/schemas/exapmles/: accounts.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py
src/security/: __init__.py  interfaces.py  manager.py  passwords.py  utils.py
src/storages/: __init__.py  interfaces.py  s3.py
src/tasks/: __init__.py  celery_app.py  tasks.py
src/tests/: conftest.py
src/tests/test_api/: test_accounts.py  test_movies.py  test_payments.py
src/tests/test_e2e/: test_admin_moderation.py  test_email_notification.py  test_movie_rating.py  test_order_refund.py  test_password_change.py  test_storage.py  test_tasks.py  test_user_journey.py
src/tests/test_integration/: test_accounts.py  test_comments.py  test_favorites.py  test_general.py  test_likes.py  test_movies.py  test_orders.py  test_payments.py  test_profiles.py  test_rates.py  test_shopping_cart.py
src/tests/test_unit/: test_emails.py  (+3 more)
src/validation/: __init__.py  profiles.py
(+18 files in other folders)
