[tool.poetry]
name = "Online-Cinema"
version = "1.0.0"
description = "Online Cinema API - A comprehensive platform for movie streaming and management"
authors = ["zakhar <zakhar.savchyn.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = ">=2.11.7,<3.0.0"
fastapi-mail = "^1.5.0"
sqlalchemy = "^2.0.41"
celery = "^5.5.3"
aiosqlite = "^0.21.0"
passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
stripe = "^12.3.0"
python-jose = "^3.5.0"
aioboto3 = "^15.0.0"
pillow = "^11.3.0"
python-multipart = "^0.0.20"
bcrypt = ">=4.1.0"
flower = "^2.0.1"
asgiref = "^3.9.0"
redis = "^6.2.0"
asyncpg = "^0.30.0"
alembic = "^1.16.2"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.0.0"
validators = "^0.35.0"
bs4 = "^0.0.2"
pytest-order = "^1.3.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
